# BINF-Projects

./: .gitignore  README.md  gene_information_query.py
16S/: methods.Rmd  methods.md  renderMethods.sh
BLAST/: predictProteins.sh
BioPython/: BioPython_genbank.py  Translate  basic_classes.py  create_seq.py  find_dmel_orf.py  sliding_window_fasta.py
CancerGenomics/: cancerGenomics.Rmd  cancerGenomics.sh  run_mutect_pon_workflow.txt  run_mutect_workflow.txt
DifferentialExpression/: PMC6678340.ris  alignAll.sh  bibliography.ris  citeExample.md  de.R  de.Rmd  de.md  dfAll.csv  get_path.py  ko  p.sh  renderMerge.sh  test.sh
Functions_Algorithms/: hello_you.py  test_output
GATK Annotation/: READ_ME.txt
GWAS/: bibliography.ris  getExamples.sh  ibd_view.mibs  rec_snp1.raw  render.sh  runPlink.Rmd  runPlink.md
GenomeAssembly/: getNGS.sh  runQuast.py  spades.py  trim.sh
HMM/: count_aip_kmers.py  markov_chains.R  spatCom.sh
IntroPython/: README.md  add_numbers.py  concatenate.py  format.py  indenting.py  open_file.py  parse_file.py  printing.py  read_by_line.py  variable.py
KEGG_GO/: get_kegg_id.py  sp_go.py
LLMGame/: README.md
LLMGame/backend/: database.db  main.py  pyproject.toml
LLMGame/backend/core/: config.py  models.py  story_generator.py
LLMGame/backend/db/: database.py
LLMGame/backend/models/: job.py  story.py
LLMGame/backend/routers/: job.py  story.py
LoopsandDecisions/: aip_kmers.txt
MSA/: APOE_refseq_transcript.fasta
Machine Leaning/: DA5030.Final.Proj.Rmd  README.md
Metagenomics/: lungData.Rmd  lungData.md
RNA-Seq/: AipBuild.sh  (+6 more)
(+177 files in other folders)
